Interest screen updated and home screen added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
     </nav>
 
     <div style="margin-top: 60px">
-      User Page
+      Public Page
     </div>
 
     <!-- Optional JavaScript -->
