--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
         <title>Userweb</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
+        <nav class="navbar navbar-expand-sm bg-light navbar-light">
           <a class="navbar-brand" href="#">Userweb</a>
           <ul class="navbar-nav">
             <li class="nav-item">
