--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,36 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends 'base.html' %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+{% load crispy_forms_tags %}
+{% load render_table from django_tables2 %}
 
-    <title>Userweb</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
-      <a class="navbar-brand" href="#">Userweb</a>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+{% block content %}
+
+    <br>
+    {% if messages %}
+      <ul class="messages">
+          {% for message in messages %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+              {{message}}
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          {% endfor %}
       </ul>
-    </nav>
+      {% endif %}
 
-    <div style="margin-top: 60px">
-      Public Page
+    <br>
+    <h2>Interests</h2>
+    <ul class="list-group">
+      {% for o in interests %}
+          <li class="list-group-item">
+            {{ o.name }}
+          </li>
+      {% endfor %}
+    </ul>
+
+    <div style="margin-top: 10px">
+      <h2>Submit Content</h2>
+
+      <form method="POST" class="post-form" action="/user/">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button type="submit" class="save btn btn-default">Submit Content</button>
+      </form>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% endblock %}
