--- a/app/templates/interest.html
+++ b/app/templates/interest.html
@@ -4,7 +4,21 @@
 {% load render_table from django_tables2 %}
 
 {% block content %}
-<br><br><br><br>
+
+    <br>
+    {% if messages %}
+      <ul class="messages">
+          {% for message in messages %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+              {{message}}
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          {% endfor %}
+      </ul>
+    {% endif %}
+
     <h2>New Interest</h2>
 
     {% if form.errors %}
@@ -22,7 +36,7 @@
         {% endfor %}
     {% endif %}
 
-    <form method="POST" class="post-form" action="/user/interests/">
+    <form method="POST" class="post-form" action="/user/interests">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="save btn btn-default">Add Interest</button>
