--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,14 +12,10 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-sm bg-light navbar-light">
-          <a class="navbar-brand" href="#">Userweb</a>
+          <a class="navbar-brand" href="/user/">Userweb</a>
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
+            {% block navigation %}
+              {% endblock %}
           </ul>
         </nav>
 
